<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg"
    android:layout_gravity="center"
    tools:context=".Menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <!-- Text La meva puntuació -->
        <TextView
            android:id="@+id/miPuntuaciotxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/miPuntuaciotxt"
            android:textSize="30sp" />
        <!-- contingut puntuació -->
        <TextView
            android:id="@+id/puntuacio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/puntuacio" />
        <!-- Imatge alien -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imatgePerfil"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/cereza" />
        <!-- uid -->
        <TextView
            android:id="@+id/uid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/uid"
            android:visibility="invisible" />
        <!-- correu -->
        <TextView
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/correo" />
        <!-- edat -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edat"
            android:textSize="15sp"
            android:text="@string/edat"
            android:gravity="center"/>
        <!-- Població -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/poblacio"
            android:textSize="15sp"
            android:text="@string/poblacio"
            android:gravity="center"/>
        <!-- nom -->
        <TextView
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/nom" />
        <!-- BOTO DE jugar -->
        <Button
            android:id="@+id/jugarBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/boto"
            android:text="@string/jugarBtn" />
        <!-- Boto d’Editar -->
        <Button
            android:id="@+id/editarBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/boto"
            android:text="@string/editarBtn" />

        <!-- BOTO DE puntuacions -->
        <Button
            android:id="@+id/PuntuacionsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/boto"
            android:text="@string/PuntuacionsBtn" />
        <!-- BOTO DE Credits -->
        <Button
            android:id="@+id/CreditsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/boto"
            android:text="@string/CreditsBtn" />
        <!-- BOTO DE Tancar sessió -->
        <Button
            android:id="@+id/tancarSessio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/boto"
            android:text="@string/tancarSessio" />
    </LinearLayout>
</ScrollView>
