<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".AccountRegister">

    <LinearLayout
        android:id="@+id/padd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <!-- ENTREM EL MAIL -->
            <EditText
                android:id="@+id/correoLogin"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/correoEt"
                android:inputType="textEmailAddress" />
            <!-- forcem que la entrada sigui un correu electronic -->
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:passwordToggleEnabled="true">
            <!-- ENTREM EL PASSWORD -->
            adas

            <EditText
                android:id="@+id/passLogin"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/passEt"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- BOTO DE ENTRAR -->
        <Button
            android:id="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/boto"
            android:text="@string/Login" />
    </LinearLayout>
</RelativeLayout>